# Rob4-Gr444-Projekt

./: .gitignore  .gitmodules  Dockerfile  README.md
Code/: AnglemodellingDebug.py  Low_band_filter.py  torch_convert.py  yolov8Test.py  yolov8TestTracking.py
Code/Realsense Test/: RealSenseTest5
Docker_Jetson/: Dockerfile  compose.yaml  entrypoint.sh
Docker_PC/: Dockerfile  compose.yaml  entrypoint.sh
Files/Motor modelling/: correct_speed_log.csv  speed_log.csv  speed_log1.csv
Files/OpenVinoFP16Yolomodel/: best.xml  metadata.yaml
Logs/: speed_log.ods  speed_log2.ods
Projekt Docker/: entrypoint.sh
main/Random Bullshit/: Readme.md
ros2_ws/: .gitignore  angle_log.csv  angle_modelling_data.csv
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/follow_me/: package.xml  setup.py
ros2_ws/src/follow_me/config/: follow_me.yaml
ros2_ws/src/follow_me/follow_me/: angle_regulator.py  command_sender.py  debug_visualizer.py  distance_regulator.py  person_angle.py  person_distance.py  simple_follower.py  yolo_person_center.py  yolo_person_center_pc.py
ros2_ws/src/follow_me/launch/: follow_me.launch.py  follow_me_debug.launch.py
sensorTestCode/: RealSenseTest3.py  RealSenseTest5.py  UWB.py  UWB_output_angle1.csv  UWB_output_angle2.csv  UWB_output_angle2_2.csv  UWB_output_angle3.csv  UWB_output_angle3testing.csv  all_angles.csv  compiled_angles.csv  rawToProcessed.py  raw_serial_log3.csv  raw_serial_log4.csv  raw_serial_log_3m_1.csv  raw_serial_log_3m_2.csv  raw_serial_log_3m_3.csv  raw_serial_log_3m_4.csv  theList.py
(+48 files in other folders)
