<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>follow_me</name>
  <version>0.0.0</version>
  <description>Follow-me YOLO system for Jetson Orin Nano and Realsense D435i</description>
  <maintainer email="oliverfast18@gmail.com">ROB4</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>follow_me_interfaces</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
